--- a/파도모형 예시.ipynb
+++ b/파도모형 예시.ipynb
@@ -216,8 +216,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "52d4524fc6497f287126464d76f0d512ead1594c0a7f7b48fcc3a93c2d7176bb"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
