--- a/22.06.07 Navier stokes Hirt VOF method.ipynb
+++ b/22.06.07 Navier stokes Hirt VOF method.ipynb
@@ -401,8 +401,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "f321019b-944b-44ff-b7a2-e7e558f42d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asfsf\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('asfsf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6026735",
    "metadata": {},
    "outputs": [],
    "source": []
