1. PPT 편집용 파일을 따로 만들어서 간략화 시킴, 2. ppt 용 폴더에 kappa = 0.3으로 폴더를 추가, 0.3일경우 no slip boundary에 해당되며(조사 조금더 하기) 꿀, 물,10,100,1000 cst의 20초에서의 댐브레이크 경향을 보았다. 3.꿀의 경우의 5시간 후의 경향을 보았다. 꿀의 경우 긴시간에 대해서 볼때 500배의 평상시의 재생속도이며, 1000cst의 경우 100배에 해당된다.평상(5배속), 6. 라벨수정을 완료. 7. PPT에 들어갈 사진을 새로 만들 었다.

--- a/22.06.07 Navier stokes Hirt VOF method.ipynb
+++ b/22.06.07 Navier stokes Hirt VOF method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "8f6ea07f-f858-48a6-8479-316d0730e860",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "04c3b3ac-5e25-4dec-82a2-ee3ee2d8e706",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "4616dd39-a6aa-4493-acfb-d8087427248c",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "525e380d-945d-4414-a44b-78c2948fbdef",
    "metadata": {},
    "outputs": [],
@@ -127,17 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "6d00a672",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x147e9193010>]"
+       "[<matplotlib.lines.Line2D at 0x187fa3d5b70>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "bb2188c0",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "262e2d7c",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "161daf48",
    "metadata": {},
    "outputs": [],
@@ -332,17 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "c66c3d83-0d1b-41dd-9479-75db5402ba49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x147eab16b00>"
+       "<matplotlib.image.AxesImage at 0x187fad2fd60>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -372,17 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "d280bd0c-6f3c-4695-86c7-7cc82930023f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x147ffc6d2a0>"
+       "<matplotlib.colorbar.Colorbar at 0x1879a060190>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "0b673626",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "6ed3bbc8-1b44-4959-833c-d327ab255f58",
    "metadata": {},
    "outputs": [
@@ -434,39 +434,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:55: RuntimeWarning: overflow encountered in multiply\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:55: RuntimeWarning: overflow encountered in multiply\n",
       "  FUX = (UiCE*UUupE - UiC*UUup)*dx\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:55: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:55: RuntimeWarning: invalid value encountered in subtract\n",
       "  FUX = (UiCE*UUupE - UiC*UUup)*dx\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:60: RuntimeWarning: overflow encountered in multiply\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:60: RuntimeWarning: overflow encountered in multiply\n",
       "  FUZ = (WiCN*UWupN-WiC*UWup)*dz\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:60: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:60: RuntimeWarning: invalid value encountered in subtract\n",
       "  FUZ = (WiCN*UWupN-WiC*UWup)*dz\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:66: RuntimeWarning: overflow encountered in multiply\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:66: RuntimeWarning: overflow encountered in multiply\n",
       "  FWX = (UiCE*WUupE - UiC*WUup)*dx\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:66: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:66: RuntimeWarning: invalid value encountered in subtract\n",
       "  FWX = (UiCE*WUupE - UiC*WUup)*dx\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:71: RuntimeWarning: overflow encountered in multiply\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:71: RuntimeWarning: overflow encountered in multiply\n",
       "  FWZ = (WiCN*WupN-WiC*Wup)*dz\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:71: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:71: RuntimeWarning: invalid value encountered in subtract\n",
       "  FWZ = (WiCN*WupN-WiC*Wup)*dz\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:81: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:81: RuntimeWarning: invalid value encountered in subtract\n",
       "  U = UC + dt*(-PX - FUX - FUZ + VISX)\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:82: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:82: RuntimeWarning: invalid value encountered in subtract\n",
       "  W = WC + dt*(-PZ - FWX - FWZ + VISZ - g)\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:31: RuntimeWarning: invalid value encountered in subtract\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:31: RuntimeWarning: invalid value encountered in subtract\n",
       "  D = (-(1/dx)*(UC - UW) + (1/dz)*(WC-WS))\n",
-      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_3564\\2207789274.py:31: RuntimeWarning: invalid value encountered in add\n",
+      "C:\\Users\\kim9y\\AppData\\Local\\Temp\\ipykernel_11180\\2207789274.py:31: RuntimeWarning: invalid value encountered in add\n",
       "  D = (-(1/dx)*(UC - UW) + (1/dz)*(WC-WS))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1478d221e10>"
+       "<matplotlib.colorbar.Colorbar at 0x1879ee69450>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
